solucion de errores

--- a/materiales/templates/materiales/formularios_altas/alta_mapa.html
+++ b/materiales/templates/materiales/formularios_altas/alta_mapa.html
@@ -42,10 +42,10 @@
     </div>
     
     <!-- Botones -->
-    <div class="row" style="margin-bottom: 120px;">
+    <div class="row botones-container">
         <div class="col-12 d-flex justify-content-end gap-3">
-            <button type="reset" class="btn btn-outline-danger btn-sm">Cancelar</button>
-            <button type="submit" class="btn btn-primary btn-sm" formaction="{% url 'confirmar_alta_mapa' %}" formmethod="post" onclick="prepararEnvioFormulario()">Guardar</button>
+            <button type="reset" class="btn btn-outline-danger btn-sm">CANCELAR</button>
+            <button type="submit" class="btn btn-primary btn-sm" formaction="{% url 'confirmar_alta_mapa' %}" formmethod="post" onclick="prepararEnvioFormulario()">GUARDAR</button>
         </div>
     </div>
 </div>
