--- a/materiales/templates/materiales/formularios_altas/formulario_libro.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_libro.html
@@ -184,7 +184,7 @@
         <!-- Las observaciones ahora están en cada ejemplar -->
 
         <!-- Botones -->
-        <div class="row" style="margin-bottom: 80px;">
+        <div class="row botones-container">
             <div class="col-12 d-flex justify-content-end gap-3">
                 <button type="reset" class="btn btn-outline-danger btn-sm">CANCELAR</button>
                 <button type="submit" class="btn btn-primary btn-sm">GUARDAR</button>
