--- a/materiales/templates/materiales/formularios_altas/alta_proyector.html
+++ b/materiales/templates/materiales/formularios_altas/alta_proyector.html
@@ -29,8 +29,8 @@
         <!-- Botones mejorados -->
         <div class="row botones-container">
             <div class="col-12 d-flex justify-content-end gap-3">
-                <button type="button" class="btn btn-outline-danger btn-cancelar" onclick="cancelarFormulario()">CANCELAR</button>
-                <button type="submit" class="btn btn-primary btn-guardar btn-save">GUARDAR</button>
+                <button type="reset" class="btn btn-outline-danger btn-sm">CANCELAR</button>
+                <button type="submit" class="btn btn-primary btn-sm">GUARDAR</button>
             </div>
         </div>
     </div>
