--- a/materiales/templates/materiales/formularios_altas/formulario_programa.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_programa.html
@@ -142,10 +142,10 @@
         </div>
 
         <!-- Botones -->
-        <div class="row">
+        <div class="row botones-container">
             <div class="col-12 d-flex justify-content-end gap-3">
-                <button type="reset" class="btn btn-outline-danger btn-sm">Cancelar</button>
-                <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
+                <button type="reset" class="btn btn-outline-danger btn-sm">CANCELAR</button>
+                <button type="submit" class="btn btn-primary btn-sm">GUARDAR</button>
             </div>
         </div>
     </form>
